<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_how_to_use"
            android:title="@string/home_to_use" />
        <item
            android:id="@+id/nav_disclaimer"
            android:title="@string/disclaimer" />
        <item
            android:id="@+id/nav_terms_of_service"
            android:title="@string/terms_of_service" />
        <item
            android:id="@+id/nav_policy"
            android:title="@string/private_policy" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/share" />
    </group>
</menu>