<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/btnback"
                android:src="@drawable/ic_back_view_video"
                app:tint="@color/white" />

            <ImageButton
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnShare"
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/btndelete"
                android:src="@drawable/ic_delete_video" />

            <ImageButton
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="btnShare"
                android:src="@drawable/ic_share_video" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageButton
            android:id="@+id/playPauseBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/playbtn"
            android:focusable="true"
            android:src="@drawable/ic_play_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />



        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="40dp"
            app:buffered_color="#D9D9D9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/exo_position"
            app:layout_constraintEnd_toStartOf="@id/exo_duration"
            app:played_color="@color/white"
            app:scrubber_color="@color/white"
            app:scrubber_disabled_size="10dp"
            app:scrubber_enabled_size="15dp"
            app:unplayed_color="#D9D9D9" />


        <TextView
            android:id="@id/exo_position"
            app:layout_constraintTop_toTopOf="@id/exo_progress"
            app:layout_constraintBottom_toBottomOf="@id/exo_progress"
            app:layout_constraintEnd_toStartOf="@id/exo_progress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/_00_00"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@id/exo_duration"
            app:layout_constraintTop_toTopOf="@id/exo_progress"
            app:layout_constraintEnd_toStartOf="@id/volumeDialog"
            app:layout_constraintStart_toEndOf="@id/exo_progress"
            app:layout_constraintBottom_toBottomOf="@id/exo_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/volumeDialog"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/exo_progress"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="22dp"
            app:layout_constraintStart_toEndOf="@id/exo_duration"
            app:layout_constraintBottom_toBottomOf="@id/exo_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_volume_up"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
